<resources>
    <string name="app_name">CafeApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--    Authentication strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordRetype">Re-type password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnLogOut">Log Out</string>
    <string name="signUpTextView">"Don't have an account yet? <b>Sign Up!</b>"</string>
    <string name="signInTextView">"Already have an account? <b>Sign In</b>"</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>